# Mesh-Editor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  pro_feedback.md  progress.md  建设方案.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  constants.py  enums.py  error_registry.py  errors.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/engines/: consistency_check.py  grid_io.py  ptype_builder.py  qpf_builder.py  version_fields.py
backend/app/plotters/: precip_phase_plotter.py  review_synoptic_plotter.py  version_plotter.py
backend/tests/: conftest.py  e2e_helpers.py  test_api_data_scan.py  test_api_windows.py  test_approval_service.py  test_archive_builder.py  test_auth.py  test_config.py  test_consistency_check.py  test_constants.py  test_data_scan_integration.py  test_database.py  test_e2e_case1_normal.py  test_e2e_case2_rejection.py  test_e2e_case3_partial.py  test_edit_api.py  test_edit_operation_repo.py  test_edit_ops.py  test_enums.py  test_error_handling.py  test_error_registry.py  test_grid_io.py  test_health.py  test_m4_db_infrastructure.py  test_m5_plot_task_service.py  test_m5_plotters.py  test_m5_review_db.py  test_m5_review_service.py  test_m6_config_template.py  test_m6_monitor_stats.py  test_m6_user_audit.py  test_mask_builder.py  test_models.py  test_path_builder.py  test_preview_cache.py  test_ptype_builder.py  test_qpf_builder.py  test_release_service.py  test_replay.py  test_review_api.py  (+6 more)
(+667 files in other folders)
