[project]
name = "mesh-editor-backend"
version = "0.1.0"
description = "FastAPI backend for Mesh Editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "bcrypt<5",
    "fastapi>=0.115.0",
    "numpy>=2.4.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = [
    "app.core.enums",
    "app.db.migrations.env",
    "app.main",
    "app.schemas.error_codes",
]
disable_error_code = ["arg-type", "assignment", "return-value"]
